--- a/template/board_list.ejs
+++ b/template/board_list.ejs
@@ -1,20 +1,24 @@
 
     <table border="1" >
-        <tr>
-            <td>제목</td>
-            <td>작성자</td>
-            <td>게시일</td>
-            <td>훈수</td>
-        </tr>
+        <thead>
+            <tr>
+                <td>제목</td>
+                <td>작성자</td>
+                <td>게시일</td>
+                <td>훈수</td>
+            </tr>
+        </thead>
+        <tbody>
         <% for( let i = 0; i < max_number; i++){%>
         <tr>
             <!-- 왜 여기서 -1을 해야하는가? -->
-            <td><a href="/read/<%=posts[i].post_no-1%>"><%= posts[i].post_title%></a></td>
+            <td><a href="/read/<%=posts[i].post_no-1%>"><%= posts[i].post_title %></a></td>
             <td><%= posts[i].user_id%></td>
             <td><%= posts[i].date%></td>
             <td>0</td>
         </tr>
         <%}%>
+        </tbody>
     </table>
     <form action="/writepost_btn" method="POST">
         <button type="submit">게시글 등록</button>
