--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,6 +10,11 @@
         src="https://kit.fontawesome.com/2d323a629b.js"
         crossorigin="anonymous"
     ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" 
+    crossorigin="anonymous">
+
     <%- include('../template/nav.html') %>
 </head>
 <!-- ---------------------------Head--------------------------------- -->
@@ -19,6 +24,9 @@
 <body>
     <form action="/logout" method="POST">
         <button type="submit">Logout</button>
+    </form>
+    <form action="/BackHome" method="POST">
+        <button type="submit">뒤로가기</button>
     </form>
     <center>
     <% if (page_state == 0) { %>
@@ -34,3 +42,7 @@
 <!-- ---------------------------Body--------------------------------- -->
 
 </html>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" 
+crossorigin="anonymous"></script>
