--- a/template/nav.html
+++ b/template/nav.html
@@ -7,8 +7,8 @@
     <title>nav</title> -->
     <script
         src="https://kit.fontawesome.com/2d323a629b.js"
-        crossorigin="anonymous"
-    ></script>
+        crossorigin="anonymous">
+    </script>
     <nav class="navbar">
         <div class="navbar_logo">
             <i class="fab fa-accusoft"></i>
