--- a/template/board_readPost.ejs
+++ b/template/board_readPost.ejs
@@ -1,5 +1,6 @@
 
 <center>
+    <div class="col-lg-12" id="ex2_Result1" ></div>
     <div class="row justify-content-center">
         <div class="col-sm-8">
             <table class="table table-responsive" id="content_table">
@@ -20,12 +21,13 @@
             <!-- ----------게시글 줄당 출력---------- -->
             <% for(let i = 0; i < post.post_content.length; i++){ %>
                 <tr onmouseover="this.style.background='#FFE4E1'" onmouseout="this.style.backgroundColor='#FFFFFF'">
+                    <td><%= i %></td>
                     <td colspan="6"><pre><%= post.post_content[i] %></pre></td>
                     <td>
                         <div class="btn-group" role="group" aria-label="Basic example" style="display:none;">
-                            <button type="button" class="btn btn-primary" title="Enter comments">훈수 보기</button>
-                            <a id="popover" href="#" data-toggle="popover" rel="comments" title="Advice" class="btn btn-primary">HUNSU</a>
-                            <div id="<%= 'menu_in_line'+i %>" class="DemoBS"></div>
+                            <button type="button" class="btn btn-primary" title="Enter comments">Advice 보기</button>
+                            <a id="popover" data-html="true" href="#" data-toggle="popover" rel="comments" title="Advice" class="btn btn-danger"><%= 'menu_in_line'+i %></a>
+                            <!-- <div id="<%= 'menu_in_line'+i %>" class="DemoBS"></div> -->
                             <!-- <a href="#" class="btn btn-lg btn-danger" data-toggle="popover" title="PopOver Demo" data-content="The size of the pop over depends upon the text area"
                                 role="button">Click to toggle popover</a> -->
                             <!-- <button id="<%= 'advice_enter'+i %>" class="btn btn-primary" rel="comments" title="Enter comments">훈수 두기</button> -->
@@ -53,42 +55,71 @@
     });
 </script>
 <script>
+    //현재 어드바이스를 작성하는 line
+    var selected_line
+
+    // 버튼 클릭시 몇번째 줄인지 식별하기 위한 이벤트
+    $(".btn-danger").click(function(){ 
+        var checkBtn = $(this);
+        selected_line = checkBtn.text().substring(12) * 1;
+        $("#ex2_Result1").html(checkBtn.text().substring(12));
+        // checkBtn.parent() : checkBtn의 부모는 <td>이다.
+        // checkBtn.parent().parent() : <td>의 부모이므로 <tr>이다.
+        // var tr = checkBtn.parent().parent();
+        // var td = tr.children();
+        // var button_text = td.eq(0).text();
+        // var line_text = button_text.replace(" ", "/")
+    });
+
     $(document).ready(function() {
-        $(document).on('click', '#popover', function() {
+        $(document).on('click', '.btn-danger', function() {
             var $this = $(this);
-            var pop_content =   '<div class="popover" role="tooltip">'+
+            var pop_template =  '<div class="popover" role="tooltip">'+
                                 '<div class="popover-arrow"></div><h3 class="popover-header">Advice</h3>'+
-                                '<div class="popover-content"><textarea class="popover-textarea"></textarea></div>'+
+                                '<div class="popover-content"><textarea class="popover-textarea">asd</textarea></div>'+
                                 '<div class="popover-footer">'+
-                                    '<button type="button" class="btn btn-primary">submit</button>&nbsp;'+
+                                    '<button id="popover-submit" type="button" class="btn btn-primary">submit</button>&nbsp;'+
                                     '<button id="popover_cancel" type="button" class="btn btn-default">cancel</button>'+
                                 '</div></div>';
-            $this.popover({
+            var content =   '<div id="popover_content">'+
+                                '<div class="form-group">'+
+                                    '<textarea class="popover-textarea" id="txtContent"></textarea>'+
+                                    '<button id="btnOk" type="button" class="btn btn-default">'+
+                                        '<span class="glyphicon glyphicon-ok"></span>&nbsp;'+
+                                    '</button>'+
+                                    '<button id="btnCancel" type="button" class="btn btn-default">'+
+                                        '<span class="glyphicon glyphicon-remove"></span>&nbsp;'+
+                                    '</button>'+
+                                '</div>'+
+                            '</div>';
+                            
+            var pop_content = '<textarea class="popover-textarea"></textarea>';
+            $('.btn-danger').popover({
                     title       :   'Advice',
                     placement   :   'right',
                     html        :   true,
-                    content     : function() {
-                                return $('div[id^="menu_in_line"]').html(pop_content); },
+                    // template    :   pop_template,
+                    content     :   content,
                     container   :   'body'
             })
             .on('show', function() {
 
                 //attach link text
-                $('.popover-textarea').val($this.text()).focus();
+                //$('.popover-textarea').val($this.text()).focus();
 
                 //hide any visible comment-popover
-                $('.popover').not(this).popover('hide');
+                $('.btn-danger').not(this).popover('hide');
                 var $this = $(this);
         
                 //close on cancel
                 $('#popover_cancel').click(function() {
-                    $this.popover('hide');
+                   $this.popover('hide');
                 });
 
                 //update link text on submit
-                $('.popover-submit').click(function() {
-                    $this.text($('.popover-textarea').val());
-                    $this.popover('hide');
+                $('#popover-submit').click(function() {
+                   $this.text($('.popover-textarea').val());
+                   $this.popover('hide');
                 });
             });
         });
