nodemon 추가, placeholder 오타 수정
nodemon으로 npm start로 시작할 수 있도록 추가
placeholder 오타로 안보였던 것들 수정

--- a/views/findID.ejs
+++ b/views/findID.ejs
@@ -12,7 +12,7 @@
         <h1>FindID Page</h1>
         <table>
             <form action="/findIDRst" method="POST">
-                <input id="name" name="name" type="text" pleaceholder="name">
+                <input id="name" name="name" type="text" placeholder="name">
                 <br />
                 <input id="email" name="email" type="text" placeholder="email">
                 <br />
