--- a/views/findPassword.ejs
+++ b/views/findPassword.ejs
@@ -12,9 +12,9 @@
         <h1>FindPassword Page</h1>
         <table>
             <form action="/findPasswordRst" method="POST">
-                <input id="user_id" name="user_id" type="text" pleaceholder="ID">
+                <input id="user_id" name="user_id" type="text" placeholder="ID">
                 <br />
-                <input id="name" name="name" type="text" pleaceholder="name">
+                <input id="name" name="name" type="text" placeholder="name">
                 <br />
                 <input id="email" name="email" type="text" placeholder="email">
                 <br />
