--- a/views/writePost.ejs
+++ b/views/writePost.ejs
@@ -13,7 +13,7 @@
         <table>
             <tr>
                 <td>
-                    <input id="post_title" name="post_title" type="text" pleaceholder="제목">
+                    <input id="post_title" name="post_title" type="text" placeholder="제목">
                 </td>
             </tr>
             <tr>
