--- a/template/board_writePost.ejs
+++ b/template/board_writePost.ejs
@@ -2,7 +2,7 @@
     <table>
         <tr>
             <td>
-                <input id="post_title" name="post_title" type="text" pleaceholder="제목">
+                <input id="post_title" name="post_title" type="text" placeholder="제목">
             </td>
         </tr>
         <tr>
