--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
         <h1>Register Page</h1>
         <table>
             <form action="/register" method="POST">
-                <input id="user_id" name="user_id" type="text" pleaceholder="ID">
+                <input id="user_id" name="user_id" type="text" placeholder="ID">
                 <br />
                 <input id="password" name="password" type="password" placeholder="Password">
                 <br />
