--- a/template/board_readPost.ejs
+++ b/template/board_readPost.ejs
@@ -52,6 +52,9 @@
         </div>
     </div>
 </center>
+<form action="/BackHome" method="POST">
+    <button type="submit">글 목록</button>
+</form>
 <script>
     $(document).ready(function() {
         $("#content_table tr").hover(
