--- a/template/board_writePost.ejs
+++ b/template/board_writePost.ejs
@@ -11,5 +11,8 @@
             </td>
         </tr>
     </table>
-    <button type="submit ">Upload</button>
+    <button type="submit ">글 쓰기</button>
+    <form action="/BackHome" method="POST">
+        <button type="submit">글 목록</button>
+    </form>
 </form>
