--- a/template/nav.html
+++ b/template/nav.html
@@ -1,30 +1,31 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nav</title> -->
-    <script
-        src="https://kit.fontawesome.com/2d323a629b.js"
-        crossorigin="anonymous">
-    </script>
-    <nav class="navbar">
+<script
+    src="https://kit.fontawesome.com/2d323a629b.js"
+    crossorigin="anonymous"
+>
+</script>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
         <div class="navbar_logo">
             <i class="fab fa-accusoft"></i>
-            <a href="#">Soruce Advice</a>
+            <a class="navbar-brand" href="/BackHome">Soruce Advice</a>
         </div>
 
-        <ul class="navbar_menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Advice</a></li>
-            <li><a href="#">Community</a></li>
-            <li><a href="#">FAQ</a></li>
-        </ul>
-
-        <ul class="navbar_button">
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#">Sign Up</a></li>
-        </ul>
-    </nav>
-<!-- </head> -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/BackHome">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Menu</a>
+                </li>
+            </ul>
+        </div>
+        <form action="/logout" method="POST">
+                <button class="btn btn-danger" type="submit">Logout</button>
+        </form>
+    </div>
+</nav>
