BackLogin -> BackHome 수정
회원가입, 아이디찾기, 비밀번호찾기 화면
/BackLogin 미구현이므로 /BackHome으로 수정

--- a/views/findIDResult.ejs
+++ b/views/findIDResult.ejs
@@ -12,7 +12,7 @@
             <%= Findid %>
         </h1>
 
-        <form action="/BackLogin" method="POST">
+        <form action="/BackHome" method="POST">
             <button type="submit">홈 화면으로</button>
         </form>
     </body>
