--- a/views/findPasswordResult.ejs
+++ b/views/findPasswordResult.ejs
@@ -14,7 +14,7 @@
             <%= passwordid %>
         </h1>
 
-        <form action="/BackLogin" method="POST">
+        <form action="/BackHome" method="POST">
             <button type="submit">홈 화면으로</button>
         </form>
     </body>
