--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,7 +31,7 @@
             <form action="/findpwd" method="POST">
                 <button type="submit">비밀번호 찾기</button>
             </form>
-            <form action="/BackLogin" method="POST">
+            <form action="/BackHome" method="POST">
                 <button type="submit">뒤로가기</button>
             </form>
         </table>
