--- a/views/findID.ejs
+++ b/views/findID.ejs
@@ -20,7 +20,7 @@
                 <br />
                 <button type="submit ">아이디 찾기</button>
             </form>
-            <form action="/BackLogin" method="POST">
+            <form action="/BackHome" method="POST">
                 <button type="submit">뒤로가기</button>
             </form>
         </table>
