--- a/views/findPassword.ejs
+++ b/views/findPassword.ejs
@@ -22,7 +22,7 @@
                 <br />
                 <button type="submit ">비밀번호 찾기</button>
             </form>
-            <form action="/BackLogin" method="POST">
+            <form action="/BackHome" method="POST">
                 <button type="submit">뒤로가기</button>
             </form>
         </table>
