navbar, footer 수정
- html에서 ejs로 수정
- navbar 우측에 유저 아이디 출력
- Logout 버튼 디자인 변경

--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -24,8 +24,9 @@
                 </li>
             </ul>
         </div>
-        <form action="/logout" method="POST">
-                <button class="btn btn-danger" type="submit">Logout</button>
-        </form>
     </div>
+    <h5 style="margin-right: 1%; color: white;"><%= id %></h5>
+    <form class="navbar_user" action="/logout" method="POST">
+        <button class="btn btn-warning" type="submit">Logout</button>
+    </form>
 </nav>
