--- a/views/main.ejs
+++ b/views/main.ejs
@@ -15,7 +15,7 @@
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" 
     crossorigin="anonymous">
 
-    <%- include('../template/nav.html') %>
+    <%- include('../template/nav') %>
 </head>
 <!-- ---------------------------Head--------------------------------- -->
 
@@ -31,7 +31,7 @@
         <%- include('../template/board_readPost') %>
     <% } %>
     </center>
-    <%- include('../template/footer.html') %>
+    <%- include('../template/footer') %>
 </body>
 <!-- ---------------------------Body--------------------------------- -->
 
