--- a/template/board_writePost.ejs
+++ b/template/board_writePost.ejs
@@ -11,8 +11,8 @@
             </td>
         </tr>
     </table>
-    <button type="submit ">글 쓰기</button>
+    <button class="btn btn-outline-primary" type="submit ">글 쓰기</button>
     <form action="/BackHome" method="POST">
-        <button type="submit">글 목록</button>
+        <button class="btn btn-outline-secondary" type="submit">글 목록</button>
     </form>
 </form>
