--- a/template/board_readPost.ejs
+++ b/template/board_readPost.ejs
@@ -53,7 +53,7 @@
     </div>
 </center>
 <form action="/BackHome" method="POST">
-    <button type="submit">글 목록</button>
+    <button class="btn btn-outline-secondary" type="submit">글 목록</button>
 </form>
 <script>
     $(document).ready(function() {
