--- a/template/board_readPost.ejs
+++ b/template/board_readPost.ejs
@@ -15,6 +15,10 @@
                     <td colspan="4"><%= post.post_title %></td>
                 </tr>
                 <tr>
+                    <td colspan="4">카테고리</td>
+                    <td colspan="4"><%= post.post_kategorie %></td>
+                </tr>
+                <tr>
                     <td colspan="8">Code</td>
                 </tr>
                 <div id="line">
