--- a/template/board_writePost.ejs
+++ b/template/board_writePost.ejs
@@ -7,6 +7,14 @@
         </tr>
         <tr>
             <td>
+                <label>언어 선택</label>
+                <label><input id="post_kategorie"name="post_kategorie" type="radio" value="C">C</label>
+                <label><input id="post_kategorie"name="post_kategorie" type="radio" value="Java">Java</label>
+                <label><input id="post_kategorie"name="post_kategorie" type="radio" value="Python">Python</label>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 <textarea id="post_content" name="post_content" placeholder="내용" cols="100" rows="20"></textarea>
             </td>
         </tr>
