--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -17,10 +17,16 @@
                     <a class="nav-link active" aria-current="page" href="/BackHome">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Menu</a>
+                    <a class="nav-link" href="/BackHome">ALL</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Menu</a>
+                    <a class="nav-link" href="/BackHome">C</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/BackHome">Java</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/BackHome">Python</a>
                 </li>
             </ul>
         </div>
