카테고리별 게시판 구현
- 메뉴 카테고리 클릭 시 같은 카테고리의 글만 있는 게시판 출력

--- a/template/nav.ejs
+++ b/template/nav.ejs
@@ -20,13 +20,13 @@
                     <a class="nav-link" href="/BackHome">ALL</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/BackHome">C</a>
+                    <a class="nav-link" href="/board_c">C</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/BackHome">Java</a>
+                    <a class="nav-link" href="/board_java">Java</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/BackHome">Python</a>
+                    <a class="nav-link" href="/board_python">Python</a>
                 </li>
             </ul>
         </div>
