--- a/views/main.ejs
+++ b/views/main.ejs
@@ -29,6 +29,12 @@
         <%- include('../template/board_writePost') %>
     <% } else if (page_state == 2) { %>
         <%- include('../template/board_readPost') %>
+    <% } else if (page_state == 3) { %>
+        <%- include('../template/board_c') %>
+    <% } else if (page_state == 4) { %>
+        <%- include('../template/board_java') %>
+    <% } else if (page_state == 5) { %>
+        <%- include('../template/board_python') %>
     <% } %>
     </center>
     <%- include('../template/footer') %>
