--- a/template/board_list.ejs
+++ b/template/board_list.ejs
@@ -12,7 +12,7 @@
         <% for( let i = 0; i < max_number; i++){%>
         <tr>
             <!-- 왜 여기서 -1을 해야하는가? -->
-            <td><a href="/read/<%=posts[i].post_no-1%>"><%= posts[i].post_title %></a></td>
+            <td><a href="/read/<%=posts[i].post_no%>"><%= posts[i].post_title %></a></td>
             <td><%= posts[i].user_id%></td>
             <td><%= posts[i].date%></td>
             <td>0</td>
